my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EPTYPE/EPTYPE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EPTYPE.dml:10:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EPTYPE.dml:14:5: error EPTYPE: wrong type for parameter b in method call
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EPTYPE.dml:14:5:   got:      int
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EPTYPE.dml:14:5:   expected: bool
